spacing fixes

--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -133,7 +133,9 @@ em {
     }
     #nav-toggle {
       display: none;
+      color: $white
     }
+ 
   }
 
   .nav-active {
